style(atomix): use assertThat in ZeebeTest